--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J3X13BJ8VW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J3X13BJ8VW');
+</script>
   <body>
 
     <div class="hero-section"
